--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ input {
 	width: 100%;
 	box-sizing: border-box;
 	background-color: #ddd;
-	border: none;
+	border: solid 2px #111;
 	margin: 0px auto;
 	font-size: 16px;
 	border-radius: 10px;
@@ -27,6 +27,7 @@ input {
 	outline: none !important;
 	transition: 0.25s ease-in-out;
 	position: relative;
+	font-weight: bold;
 }
 a {
 	color: #666;
