--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 @font-face {
   font-family: "Inter";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 600;
   font-display: swap;
-  src: url("font/Inter-Bold.woff2") format("woff2");
+  src: url("font/Inter-SemiBold.woff2") format("woff2");
 }
 body {
   background-color: #fff;
@@ -23,17 +23,18 @@ body {
 }
 #titol {
   font-size: 37px;
-  font-weight: 700;
+  font-weight: 600;
   margin: 0;
 }
 .seccions {
-  font-weight: 700;
+  font-weight: 600;
   margin: 0;
 }
 .nota {
   font-size: 12px;
   margin-top: 2px;
   color: #666;
+  margin-bottom: 0;
 }
 .divC {
   display: flex;
@@ -52,13 +53,14 @@ input {
   margin: 0px auto;
   font-size: 16px;
   border-radius: 10px;
-  margin-top: 4px;
+  margin-top: 10px;
   height: 50px;
   box-shadow: rgba(0, 0, 0, 0.0) 0 5px 10px;
   outline: none !important;
-  transition:  0.1s;
+  transition:  0.15s ease;
   position: relative;
   font-weight: bold;
+  margin-bottom: 5px;
 }
 ::placeholder {
   color: #888;
@@ -70,12 +72,11 @@ a {
   transition: color 0.2s;
 }
 a:hover {
-  text-decoration: underline;
   color: #222;
 }
 input:focus {
   box-shadow: rgba(0, 0, 0, 0.05) 0 3px 10px;
-  top: -2px;
+  transform: scale(1.01);
 }
 .app_frame {
   display: none;
@@ -127,7 +128,7 @@ input:focus {
   margin-top: 2px;
   color: #666;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
   .d {
     display: block;
   }
@@ -164,7 +165,7 @@ input:focus {
     color: #999;
   }
   a:hover {
-    color: #ccc;
+    color: #bbb;
   }
   #f_v {
     color: #bbb;
