--- a/style.css
+++ b/style.css
@@ -119,6 +119,9 @@ input:focus {
 }
 #r {
   transition: 0.5s ease-in-out;
+  margin-top: 50px;
+  display: none;
+  opacity: 0;
 }
 #f_v {
   font-size: 14px;
@@ -127,6 +130,22 @@ input:focus {
 .subtitol {
   margin-top: 2px;
   color: #666;
+}
+.sv {
+  margin-top: 2px;
+  font-size: 12px;
+}
+.fp {
+  font-weight: 600;
+  font-size: 34px;
+  margin: 0;
+}
+.divC a {
+  font-size: 12px;
+}
+.ap {
+  font-size: 18px;
+  margin-bottom: 0;
 }
 @media only screen and (max-width: 600px) {
   .d {
@@ -144,6 +163,9 @@ input:focus {
   }
   #titol {
     font-size: 26px;
+  }
+  input:focus {
+    transform: none;
   }
 }
 @media (prefers-color-scheme: dark) {
