--- a/style.css
+++ b/style.css
@@ -21,6 +21,18 @@ body {
   font-family: "Inter", Helvetica, sans-serif;
   touch-actions: pan-y;
 }
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-bottom: 5px;
+}
+.logo {
+  height: 50px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
 #titol {
   font-size: 37px;
   font-weight: 600;
@@ -128,6 +140,7 @@ input:focus {
   color: #666;
 }
 .subtitol {
+  margin: 0;
   margin-top: 2px;
   color: #666;
 }
@@ -172,6 +185,9 @@ input:focus {
   body {
     background-color: #000;
     color: #ddd;
+  }
+  .logo {
+    filter: invert(1);
   }
   #t {
     background-color: #191919;
