--- a/style.css
+++ b/style.css
@@ -160,6 +160,32 @@ input:focus {
   font-size: 18px;
   margin-bottom: 0;
 }
+.language-selector {
+  margin-left: auto;
+  align-self: flex-start;
+  margin-top: 10px;
+}
+
+.language-selector select {
+  background-color: #e1e1e1;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 12px;
+  font-size: 14px;
+  font-weight: 600;
+  cursor: pointer;
+  outline: none;
+  transition: background-color 0.15s ease;
+}
+
+.language-selector select:hover {
+  background-color: #d1d1d1;
+}
+
+.language-selector select:focus {
+  background-color: #d1d1d1;
+}
+
 @media only screen and (max-width: 600px) {
   .d {
     display: block;
@@ -213,5 +239,14 @@ input:focus {
   }
   .subtitol {
     color: #999;
+  }
+  .language-selector select {
+    background-color: #313131;
+    color: #eee;
+  }
+  
+  .language-selector select:hover,
+  .language-selector select:focus {
+    background-color: #404040;
   }
 }
